--- a/client/src/layout/navbar/navbar.scss
+++ b/client/src/layout/navbar/navbar.scss
@@ -29,4 +29,27 @@ header.header {
 			}
 		}
 	}
+	.right-section {
+		.user-profile {
+			@include flex(space-between, center);
+			gap: 1rem;
+			cursor: pointer;
+			.user-img {
+				width: 35px;
+				height: 35px;
+			}
+			.user-info {
+				.info-username {
+					color: orangered;
+					font-size: 22px;
+					display: block;
+				}
+				.info-email {
+					color: #777;
+					font-size: 14px;
+					display: block;
+				}
+			}
+		}
+	}
 }
