finish frontend & backend in the auth page [ Signin, Signup, Google Signin, Google Signup ]

--- a/client/src/components/auth/login.scss
+++ b/client/src/components/auth/login.scss
@@ -2,6 +2,14 @@
 
 .auth-container {
 	height: 100vh;
+	.navigate-back {
+		width: fit-content;
+		cursor: pointer;
+		border-radius: 50%;
+		&:hover {
+			box-shadow: 2px 5px 5px 1px #999;
+		}
+	}
 	.auth-icon {
 		background: get(second-color);
 		color: white;
@@ -17,7 +25,7 @@
 		position: relative;
 		top: 10%;
 		padding: 20px;
-		.form-container {
+		.paper-body {
 			.is-sign-up {
 				color: get(main-color);
 				text-align: center;
