--- a/MERN_PROJECTS/Booking_App/client/src/assets/scss/_global.scss
+++ b/MERN_PROJECTS/Booking_App/client/src/assets/scss/_global.scss
@@ -1,7 +1,6 @@
 @use "./variables" as *;
 @use "./mixins" as *;
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Cinzel:wght@400;500;600;700;800;900&family=Dancing+Script:wght@400;500;600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Playfair+Display:ital,wght@1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
 	padding: 0;
 	margin: 0;
@@ -15,10 +14,9 @@
 
 html {
 	width: 100vw;
-	overflow-x: hidden;
 	scroll-behavior: smooth;
 	::-webkit-scrollbar {
-		width: 0.7rem;
+		width: 0.4rem;
 	}
 	::-webkit-scrollbar-thumb {
 		background: get(main-color);
@@ -35,7 +33,9 @@ html {
 }
 
 body {
-	font-family: "Poppins", sans-serif;
+	font-family: "Montserrat", "Poppins", sans-serif;
+	overflow-x: hidden;
+	padding: 0 !important;
 }
 
 @keyframes updown {
