--- a/MERN_PROJECTS/Booking_App/client/src/components/hotel/hotel.scss
+++ b/MERN_PROJECTS/Booking_App/client/src/components/hotel/hotel.scss
@@ -1,6 +1,6 @@
-@use "../../scss/mixins" as *;
+@use "../../assets/scss/mixins" as *;
 
-.guest-box {
+.hotel-box {
 	box-shadow: 2px 1px 10px 1px rgba(black, 0.5);
 	border-radius: 15px;
 	overflow: hidden;
