--- a/MERN_PROJECTS/Booking_App/client/src/components/list-item/list-item.scss
+++ b/MERN_PROJECTS/Booking_App/client/src/components/list-item/list-item.scss
@@ -1,4 +1,4 @@
-@use "../../scss/mixins" as *;
+@use "../../assets/scss/mixins" as *;
 
 .list-item {
 	padding-bottom: 16px;
@@ -89,6 +89,7 @@
 				span:nth-child(2) {
 					color: #1976d2;
 					font-size: 30px;
+					line-height: 1.2;
 					font-weight: bold;
 					@include width(md) {
 						font-size: 25px;
