--- a/MERN_PROJECTS/Booking_App/client/src/routes/list/list.scss
+++ b/MERN_PROJECTS/Booking_App/client/src/routes/list/list.scss
@@ -1,4 +1,4 @@
-@use "../../scss/mixins" as *;
+@use "../../assets/scss/mixins" as *;
 
 .list-page {
 	.list-container {
@@ -40,6 +40,7 @@
 				.avatar {
 					width: 100%;
 					height: 100%;
+					cursor: pointer;
 					border-radius: 10px;
 				}
 			}
@@ -80,8 +81,6 @@
 					}
 				}
 			}
-		}
-		.footer {
 		}
 	}
 }
